# AnveshAI-Video-Generator-V2

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
static/: app.js  architecture_diagram.py  style.css  videos.css
templates/: architecture.html  index.html  videos.html
video_engine/: __init__.py  constants.py  database.py  dsl_parser.py  llm_translator.py  pipeline.py  renderer.py
