[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.122.0",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "jinja2>=3.1.6",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
